--- a/extracted.bib
+++ b/extracted.bib
@@ -908,3 +908,34 @@
   doi =           {10.1146/annurev.astro.45.071206.100404},
 }
 
+@article{Hirota2017a,
+  author =        {{Hirota}, T. and {Machida}, M.~N. and
+                   {Matsushita}, Y. and {Motogi}, K. and {Matsumoto}, N. and
+                   {Kim}, M. and {Burns}, R.~A. and {Honma}, M.},
+  journal =       {ArXiv e-prints},
+  month =         nov,
+  title =         {{ALMA observations of submillimeter H2O and SiO lines
+                   in Orion Source I}},
+  year =          {2017},
+  abstract =      {We present observational results of the submillimeter
+                   H2O and SiO lines toward a candidate high-mass young
+                   stellar object Orion Source I using ALMA. The spatial
+                   structures of the high excitation lines at
+                   lower-state energies of >2500 K show compact
+                   structures consistent with the circumstellar disk
+                   and/or base of the northeast-southwest bipolar
+                   outflow with a 100 au scale. The highest excitation
+                   transition, the SiO (v=4) line at band 8, has the
+                   most compact structure. In contrast, lower-excitation
+                   transitions are more extended than 200 au tracing the
+                   outflow. Almost all the line show velocity gradients
+                   perpendicular to the outflow axis suggesting rotation
+                   motions of the circumstellar disk and outflow. While
+                   some of the detected lines show broad line profiles
+                   and spatially extended emission components indicative
+                   of thermal excitation, the strong H2O lines at 321
+                   GHz, 474 GHz, and 658 GHz with brightness
+                   temperatures of >1000 K show clear signatures of
+                   maser action.},
+}
+
