Updates from ShareLaTeX

--- a/lines_in_band6.tex
+++ b/lines_in_band6.tex
@@ -1,6 +1,8 @@
 \begin{table*}[htp]
 \centering
-\caption{All observed lines in Band 6}
+\caption{Salt lines in Band 6}
+% \caption{All observed lines in Band 6}
+% "observed" often means "detected", hence is misleading - Dick
 \begin{tabular}{cccccccc}
 \label{tab:all_detections_B6}
 Species & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
