--- a/lines_in_band7.tex
+++ b/lines_in_band7.tex
@@ -1,6 +1,8 @@
 \begin{table*}[htp]
 \centering
-\caption{All observed lines in Band 7}
+% \caption{All observed lines in Band 7}
+% "observed" often means "detected", hence is misleading - Dick
+\caption{Salt lines in Band 7}
 \begin{tabular}{cccccccc}
 \label{tab:all_detections_B7}
 Species & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
