--- a/lines_in_band3.tex
+++ b/lines_in_band3.tex
@@ -1,8 +1,6 @@
 \begin{table*}[htp]
 \centering
-\caption{Salt lines in Band 3}
-% \caption{All observed lines in Band 3} 
-% "observed" often means "detected", so could be misleading - Dick
+\caption{All cataloged lines in Band 3}
 \begin{tabular}{cccccccc}
 \label{tab:all_detections_B3}
 Species & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
