--- a/lines_in_band6.tex
+++ b/lines_in_band6.tex
@@ -1,8 +1,6 @@
 \begin{table*}[htp]
 \centering
-\caption{Salt lines in Band 6}
-% \caption{All observed lines in Band 6}
-% "observed" often means "detected", hence is misleading - Dick
+\caption{All cataloged lines in Band 6}
 \begin{tabular}{cccccccc}
 \label{tab:all_detections_B6}
 Species & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
