--- a/extracted.bib
+++ b/extracted.bib
@@ -939,3 +939,123 @@
                    maser action.},
 }
 
+@misc{Ginsburg2018SpectralCube,
+  author =        {Adam Ginsburg and Thomas Robitaille and Eric Koch and
+                   Chris Beaumont and adamginsburg and John ZuHone and
+                   Brigitta Sipocz and Craig Jones and P. L. Lim and
+                   Erik Rosolowsky and Nicholas Earl and jrobbfed and
+                   shuokong and Amanda Kepley and Vlas Sokolov and
+                   The Gitter Badger and Sebastien Maret and
+                   Juli{\'a}n Garrido and Joseph Booker and
+                   Erik Tollerud},
+  month =         apr,
+  publisher =     {Zenodo},
+  title =         {radio-astro-tools/spectral-cube},
+  year =          {2018},
+  doi =           {10.5281/zenodo.1213217},
+  url =           {https://doi.org/10.5281/zenodo.1213217},
+}
+
+@misc{Ginsburg2018RadioBeam,
+  author =        {Eric Koch and Adam Ginsburg and AKL and
+                   Erik Rosolowsky and Thomas Robitaille and
+                   Miguel de Val-Borro and Brigitta Sipocz},
+  month =         feb,
+  publisher =     {Zenodo},
+  title =         {keflavich/radio\_beam},
+  year =          {2018},
+  doi =           {10.5281/zenodo.1181879},
+  url =           {https://doi.org/10.5281/zenodo.1181879},
+}
+
+@article{Astropy-Collaboration2013a,
+  author =        {{Astropy Collaboration} and {Robitaille}, T.~P. and
+                   {Tollerud}, E.~J. and {Greenfield}, P. and
+                   {Droettboom}, M. and {Bray}, E. and {Aldcroft}, T. and
+                   {Davis}, M. and {Ginsburg}, A. and
+                   {Price-Whelan}, A.~M. and {Kerzendorf}, W.~E. and
+                   {Conley}, A. and {Crighton}, N. and {Barbary}, K. and
+                   {Muna}, D. and {Ferguson}, H. and {Grollier}, F. and
+                   {Parikh}, M.~M. and {Nair}, P.~H. and {Unther}, H.~M. and
+                   {Deil}, C. and {Woillez}, J. and {Conseil}, S. and
+                   {Kramer}, R. and {Turner}, J.~E.~H. and {Singer}, L. and
+                   {Fox}, R. and {Weaver}, B.~A. and {Zabalza}, V. and
+                   {Edwards}, Z.~I. and {Azalee Bostroem}, K. and
+                   {Burke}, D.~J. and {Casey}, A.~R. and
+                   {Crawford}, S.~M. and {Dencheva}, N. and {Ely}, J. and
+                   {Jenness}, T. and {Labrie}, K. and {Lim}, P.~L. and
+                   {Pierfederici}, F. and {Pontzen}, A. and {Ptak}, A. and
+                   {Refsdal}, B. and {Servillat}, M. and
+                   {Streicher}, O.},
+  journal =       {\aap},
+  month =         oct,
+  pages =         {A33},
+  title =         {{Astropy: A community Python package for astronomy}},
+  volume =        {558},
+  year =          {2013},
+  abstract =      {We present the first public version (v0.2) of the
+                   open-source and community-developed Python package,
+                   Astropy. This package provides core astronomy-related
+                   functionality to the community, including support for
+                   domain-specific file formats such as flexible image
+                   transport system (FITS) files, Virtual Observatory
+                   (VO) tables, and common ASCII table formats, unit and
+                   physical quantity conversions, physical constants
+                   specific to astronomy, celestial coordinate and time
+                   transformations, world coordinate system (WCS)
+                   support, generalized containers for representing
+                   gridded as well as tabular data, and a framework for
+                   cosmological transformations and conversions.
+                   Significant functionality is under activedevelopment,
+                   such as a model fitting framework, VO client and
+                   server tools, and aperture and point spread function
+                   (PSF) photometry tools. The core development team is
+                   actively making additions and enhancements to the
+                   current code base, and we encourage anyone interested
+                   to participate in the development of future Astropy
+                   versions.},
+  doi =           {10.1051/0004-6361/201322068},
+  eid =           {A33},
+}
+
+@misc{Ginsburg2018Astroquery,
+  author =        {Adam Ginsburg and Brigitta Sipocz and Madhura Parikh and
+                   Julien Woillez and Austen Groener and Simon Liedtke and
+                   Thomas Robitaille and jcsegovia and Christoph Deil and
+                   Henrik Norman and C. E. Brasseur and Brian Svoboda and
+                   Erik Tollerud and Miguel de Val-Borro and
+                   Magnus Vilhelm Persson and adamginsburg and
+                   Philip Cowperthwaite and
+                   Lo{\"\i}c S{\'e}guin-Charbonneau and David Collom and
+                   Caden Armstrong and Brett M. Morris and
+                   Jordan Mirocha and Josh Cardenzana and Ayush Yadav and
+                   Michael Seifert and Michael Droettboom and
+                   Fred Moolekamp and james-allen and Christian Mesh and
+                   Azalee Bostroem},
+  month =         apr,
+  publisher =     {Zenodo},
+  title =         {astropy/astroquery},
+  year =          {2018},
+  doi =           {10.5281/zenodo.1234036},
+  url =           {https://doi.org/10.5281/zenodo.1234036},
+}
+
+@inproceedings{McMullin2007a,
+  author =        {{McMullin}, J.~P. and {Waters}, B. and {Schiebel}, D. and
+                   {Young}, W. and {Golap}, K.},
+  booktitle =     {Astronomical Data Analysis Software and Systems XVI},
+  editor =        {{Shaw}, R.~A. and {Hill}, F. and {Bell}, D.~J.},
+  month =         oct,
+  pages =         {127},
+  series =        {Astronomical Society of the Pacific Conference
+                   Series},
+  title =         {{CASA Architecture and Applications}},
+  volume =        {376},
+  year =          {2007},
+  abstract =      {We describe the CASA (Common Astronomy Software
+                   Applications) package, its design and capabilities.
+                   CASA is a suite of applications for the reduction and
+                   analysis of radio astronomical data with a Python
+                   interface.},
+}
+
