add abundance section

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -788,6 +788,25 @@ entirely in the gas phase.
 %had the same metallicity as the star.  So I think (3) is best simplified
 %as just: ``the dust is naturally `ground up' in the disk''.}
 
+\subsection{Isotopologue abundances}
+With several transitions of each of the observed isotopologues, we can in
+principle measure the relative abundance of the various isotopes.  However,
+because of the uncertainties in the excitation above, these measurements should
+be taken with a grain of salt.
+
+The $^{37}$Cl abundance can be measured by comparing the intensity of the
+NaCl and Na$^{37}$Cl v=3 J=7-6, v=4 J=8-7 and J=7-6, and v=5 J=8-7 lines.
+The ratio $^{35}$/$^{37}$Cl is $r=1.4\pm0.4$.  The KCl v=0 J=45-44 line
+gives a $^{35}/^{37}$Cl ratio $r=0.8$.  \citet{Agundez2012a} measured
+this ratio to be $r=2.9\pm0.3$ in IRC+10216.  Our measurement is somewhat lower,
+but should be regarded as consistent at least until we can obtain more
+accurate column density measurements.
+
+We only have one commonly observed $^{41}$KCl / $^{39}$KCl line, v=0 J=13-12,
+which has a ratio $^{39}/^{41}$ $r=2.4$.  \ag{Have there been any measurements
+of this ratio?}
+
+
 \subsection{Future prospects}
 The detection of these refractory species in the gas phase in the atmosphere
 of \sourcei's disk hints that other refractory molecules may be present, 
