add question about AlCl, AlF

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -694,7 +694,7 @@ is uncertain.
 
 
 
-\subsection{Why are the salts present?}
+\subsection{Why are these salts present?}
 
 Sodium and potassium are rarely observed in the dense molecular interstellar
 medium.  They are usually assumed to be rapidly incorporated into dust grains
@@ -758,6 +758,10 @@ entirely in the gas phase.
 % change the rates), implying that the critical density of the
 % NaCl transition is $\sim10\times$ higher.
 
+While NaCl and KCl are clearly detected here, there are also several lines of
+AlCl and AlF in our observational bands that were not detected.  \citet{Cernicharo1987a}
+detected these lines at a comparable brightness to NaCl and KCl in IRC+10216.
+Why are these species absent in the disk of \sourcei?
 
 %(1) the dust is totally vaporized, so the salts are in the gas phase.  This is
 %pretty implausible, since it presumably requires temperatures >1000 K,
