why no AlCl/AlF?

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -759,9 +759,9 @@ entirely in the gas phase.
 % NaCl transition is $\sim10\times$ higher.
 
 While NaCl and KCl are clearly detected here, there are also several lines of
-AlCl and AlF in our observational bands that were not detected.  \citet{Cernicharo1987a}
-detected these lines at a comparable brightness to NaCl and KCl in IRC+10216.
-Why are these species absent in the disk of \sourcei?
+AlCl and AlF in our observational bands that were not detected.
+\citet{Cernicharo1987a} detected these lines at a comparable brightness to NaCl
+and KCl in IRC+10216.  Why are these species absent in the disk of \sourcei?
 
 %(1) the dust is totally vaporized, so the salts are in the gas phase.  This is
 %pretty implausible, since it presumably requires temperatures >1000 K,
