fix figure & add Mel's caveat

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -454,6 +454,8 @@ obtaining $T_{ex,rot}\approx100-150$ K.  If we assume that the apparent consiste
 with a rotational temperature similar to the dust continuum temperature implies
 the rotational transitions are in local thermodynamic equilibrium with gas at 
 that temperature, we can infer a lower limit on the local density.
+However, we note that there may be unresolved excitation structure within our
+observations such that a single-zone, single temperature model does not apply.
 
 \citet{Quintana-Lacaci2016a} calculated collision rates for NaCl with He and
 provided a fortran code to produce those rates.  We have created a
