more text.  add cherncheff

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -310,7 +310,8 @@ conditions in the \sourcei salt emission regions.
 % IK Tauri, VY Canis Majoris \citep{Milam2007a}
 
 \subsection{Where is the emission coming from?}
-In \sourcei, the salt lines originate from the surface layers of the disk,
+In \sourcei, the salt lines originate from the surface layers of the disk (the Band 7
+lines exhibit NaCl emission peaks at $\pm0.032\arcsec=13$ AU above the disk),
 % \citet{Ginsburg2018b} showed that these species come only from the disk's
 % immediate surroundings, 
 unlike SiO and \water that both exhibit high vertical extents consistent with
@@ -732,14 +733,16 @@ outflow \citep{Hirota2017a}.
 % addition to the radial one.}
 
 
-In this scenario,  NaCl and KCl molecules are sputtered from the grains by
-high-energy gas particles.  The most plausible means to achieve the energies
-required to sputter grains is with strong shocks.  In \sourcei, it seems
-unlikely that there would be very strong shocks in the disk, but there are
-high-velocity shocks throughout the outflow. Strong SiO emission is observed in
-the inner part of the outflow
-(i.e., within $<100$ AU of \sourcei),
-suggesting that grains are efficiently destroyed there.
+In this scenario,  NaCl and KCl molecules are sputtered from the grains.  The
+most plausible means to achieve the energies required to sputter grains is with
+strong shocks \citep{Schilke1997a}.  In
+\sourcei, it seems unlikely that there would be very strong shocks in the disk,
+but there are high-velocity shocks throughout the outflow. Strong SiO emission
+is observed in the inner part of the outflow (i.e., within $<100$ AU of
+\sourcei), suggesting that grains are efficiently destroyed there.
+Without knowing the grain structure, however, it is unclear whether high-energy
+particles capable of destroying the grain cores are present, or if instead
+the salts are being released from evaporation of the grain mantles.
 
 Since the salts are detected close to but above the disk midplane, the
 grains must be sputtered very rapidly after being launched from the disk surface.
@@ -763,7 +766,9 @@ entirely in the gas phase.
 While NaCl and KCl are clearly detected here, there are also several lines of
 AlCl and AlF in our observational bands that were not detected.
 \citet{Cernicharo1987a} detected these lines at a comparable brightness to NaCl
-and KCl in IRC+10216.  Why are these species absent in the disk of \sourcei?
+and KCl in IRC+10216.  The lack of AlCl may be because \sourcei's disk is
+oxygen-rich, and aluminum is locked into AlOH, as suggested in the
+\citet{Cherncheff2012a} model.
 
 %(1) the dust is totally vaporized, so the salts are in the gas phase.  This is
 %pretty implausible, since it presumably requires temperatures >1000 K,
