add AlO detection

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -169,6 +169,11 @@ detections and marginal detections of salt lines, as well as the most prominent
 outflow (e.g., SiO and H$_2$O) lines.  Only 2-3 emission lines are now
 unidentified in the B6 and B7 spectra, though there are over a dozen in B3 that
 we have not identified. 
+
+We also tentatively identify broad lines at 229.7 GHz and 334.4 GHz as AlO.  If
+the identification is correct, these lines are broad because of the rich hyperfine
+spectrum of AlO.
+
 % I count 15 unidentified emission lines in B3; I added "emission" above 
 % because there are lots of unidentified absorption lines from foreground gas. - Dick
 %
@@ -768,7 +773,8 @@ AlCl and AlF in our observational bands that were not detected.
 \citet{Cernicharo1987a} detected these lines at a comparable brightness to NaCl
 and KCl in IRC+10216.  The lack of AlCl may be because \sourcei's disk is
 oxygen-rich, and aluminum is locked into AlOH, as suggested in the
-\citet{Cherncheff2012a} model.
+\citet{Cherncheff2012a} model.  Indeed, the tentative detection of AlO
+in our spectra supports this conclusion.
 
 %(1) the dust is totally vaporized, so the salts are in the gas phase.  This is
 %pretty implausible, since it presumably requires temperatures >1000 K,
