add ionized formation scenario

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -776,6 +776,26 @@ oxygen-rich, and aluminum is locked into AlOH, as suggested in the
 \citet{Cherncheff2012a} model.  Indeed, the tentative detection of AlO
 in our spectra supports this conclusion.
 
+
+We consider an alternative hypothesis: the salts are observed because they are
+presently forming directly in the gas phase.  Potassium and sodium have similar
+first ionization potentials at 4.34 and 5.14 eV, respectively.  These atoms
+would be nearly fully ionized between 1500-2000 K at a density of $10^6$
+\percc (Aluminum has a higher first ionization potential of 5.99 eV, and so is ionized
+at a few hundred K higher temperatures than sodium).  These ions react with HCl
+to form NaCl and KCl.  However, at present, only the inner $<20$ AU region,
+which is currently unresolved, clearly reaches
+such high temperatures.  Either material in that inner region is being
+transported outward, which seems unlikely since there is a bulk outflow lifting
+material off of the disk, or the disk was previously substantially warmer.
+Under the dynamical formation scenario of the disk, in which it is the remnant
+of a previously larger disk from the \sourcei-BN interaction
+\citep{Bally2017a,Luhman2018a}, a great deal of kinetic energy was released as
+the disk re-settled into its current apparently smooth state.  This scenario
+implies that the observable state of NaCl and KCl is very short lived, as these
+molecules are in the process of depleting onto grains.
+
+
 %(1) the dust is totally vaporized, so the salts are in the gas phase.  This is
 %pretty implausible, since it presumably requires temperatures >1000 K,
 %and the highest excitation line can be excited by 4 \um photons.
