Updates from ShareLaTeX

--- a/extracted.bib
+++ b/extracted.bib
@@ -1059,3 +1059,23 @@
                    interface.},
 }
 
+@ARTICLE{Kaplan2017,
+   author = {{Kaplan}, K.~F. and {Dinerstein}, H.~L. and {Oh}, H. and {Mace}, G.~N. and 
+	{Kim}, H. and {Sokal}, K.~R. and {Pavel}, M.~D. and {Lee}, S. and 
+	{Pak}, S. and {Park}, C. and {Sok Oh}, J. and {Jaffe}, D.~T.
+	},
+    title = "{Excitation of Molecular Hydrogen in the Orion Bar Photodissociation Region from a Deep Near-infrared IGRINS Spectrum}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1701.05604},
+ keywords = {infrared: ISM, ISM: individual objects: Orion Bar, ISM: molecules, photon-dominated region: PDR, techniques: spectroscopic},
+     year = 2017,
+    month = apr,
+   volume = 838,
+      eid = {152},
+    pages = {152},
+      doi = {10.3847/1538-4357/aa5b9f},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...838..152K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
