--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -388,7 +388,7 @@ line.
 \subsection{Excitation}
 The detection of vibrationally excited transitions from v=0 to v=6 at similar
 brightness suggests that the vibrational excitation temperature $T_{ex,vib}$ of
-the molecules is very high.  However, we see sharply decreasing populations in
+the molecules is high.  However, we see sharply decreasing populations in
 the higher rotational levels, indicating a much lower $T_{ex,rot}$.
 % Since the
 % molecules are not characterized by a single $T_{ex}$, they may be excited by
@@ -427,11 +427,12 @@ vibrationally excited states should be effectively zero.
 Within each rotational state for which we have multiple vibrational line
 measurements, we measure a vibrational temperature.  We find temperatures
 ranging from 1000-5000 K, although these measurements are subject to very large
-uncertainties; the fits are consistent with any temperature within this range
-(and, statistically but not physically, they are consistent with arbitrarily
-large excitation temperatures).  There are also statistically significant
+uncertainties; the fits are consistent with any temperature within this range.
+% (and, statistically but not physically, they are consistent with arbitrarily
+% large excitation temperatures).  
+There are also statistically significant
 outliers from the single-temperature model, suggesting that the level
-populations are not well characterized by a temperature at all.
+populations may not be well-characterized by a temperature at all.
 
 % The rotational temperatures are reasonably consistent with the lower bound
 % disk temperatures at this radius, hinting that the salt emission lines are
@@ -449,31 +450,54 @@ populations are not well characterized by a temperature at all.
 % However, it is also possible that the higher-excitation lines are simply too faint
 % to be detected at our $\sim0.4$ mJy/\kms RMS limit.
 
-\subsubsection{Line Excitation Models}
-We explore several explanations for the observed line excitation:
+% \subsubsection{Line Excitation Models}
+Below, we explore several mechanisms for the observed line excitation:
 
-\par{\textbf{(1) Collisional excitation sets the rotational temperatures, radiation
-sets the vibration:}}
-In Figure \ref{fig:rotationdiagrams}, we show that it is possible to acquire
-reasonable fits to the rotational transitions within a single vibrational state,
-obtaining $T_{ex,rot}\approx100-150$ K.  If we assume that the apparent consistency
-with a rotational temperature similar to the dust continuum temperature implies
-the rotational transitions are in local thermodynamic equilibrium with gas at 
-that temperature, we can infer a lower limit on the local density.
-However, we note that there may be unresolved excitation structure within our
-observations such that a single-zone, single temperature model does not apply.
-
+\par{\textbf{(1) Collisional excitation by \hh.}} 
+%
+% \par{\textbf{(1) Collisional excitation sets the rotational temperatures, radiation
+% sets the vibration:}}
+% In Figure \ref{fig:rotationdiagrams}, we show that it is possible to acquire
+% reasonable fits to the rotational transitions within a single vibrational state,
+% obtaining $T_{ex,rot}\approx100-150$ K.  If we assume that the apparent consistency
+% with a rotational temperature similar to the dust continuum temperature implies
+% the rotational transitions are in local thermodynamic equilibrium with gas at 
+% that temperature, we can infer a lower limit on the local density.
+% However, we note that there may be unresolved excitation structure within our
+% observations such that a single-zone, single temjperature model does not apply.
+%
 \citet{Quintana-Lacaci2016a} calculated collision rates for NaCl with He and
-provided a fortran code to produce those rates.  We have created a
-RADEX-compatible molecular data file, which we distribute with this paper, and
-used RADEX to examine the excitation.  For T=100 K, $\delta v=1$ \kms \perpc, $X_{NaCl}=10^{-10}$, the
+provided a Fortran code to compute those rates.  Typical collision rate coefficients for
+$\Delta$J = 1 or $\Delta$J = 2 transitions are $10^{-10}$~cm$^3$ \pers.  Making the usual
+assumption that the collision rates with \hh are similar to those for He, we used
+RADEX [ref] to examine the excitation [footnote: the RADEX-compatible molecular data
+file incorporating these coefficients is available from ....?].
+For T=100 K, $\delta v=1$ \kms \perpc, $X_{NaCl}=10^{-10}$ \rlp{presumably,
+the fractional abundance doesn't matter when one is computing critical density;
+giving this value will create confusion; the linewidth also is questionable}, the
 `effective density' at which the lines become detectable is $n\sim10^{6} + 
-10^{2v}$ \percc, where $v$ is the vibrational state quantum number.  In other words,
-the critical density is two orders of magnitude higher for each progressively
-higher vibrational state.  While our collision coefficients do not extend
-to $v=6$, if we extrapolate,  densities
+10^{2v}$ \percc, where $v$ is the vibrational state quantum number.  The critical
+density is two orders of magnitude higher for each progressively
+higher vibrational state.  While the collision coefficients do not extend
+to $v=6$, extrapolation indicates that \hh densities
 $n\gtrsim10^{18}$ \percc are required to collisionally excite the $v=6$ lines.
-The declining brightness with rising rotational quantum number rules out
+
+\par{\textbf{(2) Collisional excitation by electrons.}} 
+Because NaCl and KCl are extremely polar molecules, with dipole moments of
+9 and 10 Debye, respectively \rlp{exact values, and references, here?}, 
+collisions with electrons could also be important.
+Using the approximations from \citet{Dickinson1975a}, we find that collision
+rates between both NaCl and KCl and electrons in the J=5-50 v=0 states are
+$C\approx10^{-5}$ cm$^{3}$ \pers.  Thus, electrons are $10^5\times$ more 
+efficient at exciting these molecules than \hh. In typical
+low-mass disks, ionization fractions $X_e \geq 10^{-4}$ occur in the upper layers
+of the disk, where some UV radiation is able to ionize H and C to H+ and C+
+\citep{Bergin2007a}.  Collisions with electrons would dominate the excitation of
+the salt lines in such regions.  However, deeper into these disks, only X-rays and cosmic
+rays can penetrate to ionize neutrals, resulting in fractional ionizations $X_e < 10^{-6}$,
+too small to be relevant. 
+
+The declining brightness with rising rotational quantum number rules out both \hh and electron
 collisional excitation for the vibrational states, as any density high enough
 to excite vibrational states would thermalize the rotational levels.
 
@@ -498,89 +522,100 @@ to excite vibrational states would thermalize the rotational levels.
 % seen at high elevations above the disk, while SiO v=5 is seen only at elevations
 % similar to NaCl; the difference
 
-
-The observed emission from vibrationally excited states therefore implies the
+\par{\textbf{(3) Infrared excitation. }} 
+The observed emission from vibrationally excited states suggests the
 presence of a significant radiation field at 25-45 \um, which covers the range
 of $\Delta v=1$ rovibrational transitions with $v\leq6$ (for NaCl, the range is
-25-35 \um, for KCl, it is 35-45 \um).  If we assume that all of the vibrational
-states are populated by $\Delta v=1$ transitions (which is a good first
-approximation, since the Einstein A-values for these transitions are $A\sim1$
-\pers, which is $\sim100\times$ greater than the $\Delta v=2$ transitions),
-there must be enough radiation to keep a large constant population in the $v=1,
+25-35 \um, for KCl, it is 35-45 \um).  Since the selection rules for these
+transitions require that $\Delta v=1$ [footnote: Einstein A-values for the 
+$\Delta v=2$ transitions are $\sim100$ times smaller than for the $\Delta v=1$
+transitions, for which $A\sim1$ \pers], the radiation density must be high
+enough to maintain a large population in the $v=1,
 2, 3, 4, 5$ states such that some fraction of photons are able to excite
-molecules to still higher states.
+molecules to still higher states.  Such a strong radiation field would
+be expected to thermalize the rotational ladders within each vibrational
+state to the same high temperature, which is not observed.
+
 % The vibrational emission lines therefore
 % imply an \emph{upper} limit on the density $n<A/C\sim10^{10}$ \percc, since if
 % the collision rate were faster than the spontaneous emission rate, the higher
 % excited states would be collisionally deexcited without emitting photons.
 
+% This scenario is plausible, but it raises a question: if the radiation field is
+% strong enough to produce similar intensities across the v=0 to v=6 vibrational
+% states, why have the rotational states not reached equilibrium with the radiation
+% field?
 
+\par{\textbf{(3) Ultraviolet excitation.}}
+% In this model, collisions and infrared radiation can be ignored.  Instead,
+% higher-energy photons are responsible for the excitation.  In order to directly
+% excite the higher observed vibrationally excited states ($v\geq6$), 5 micron or
+% shorter-wavelength photons are required.
+%
+% A model in which the excitation is driven by the radiation field at 4-10 microns,
+% i.e., directly exciting the v=0 to the v=3-6 excitation states for NaCl,
+% can be ruled out on the basis of the low interaction cross-sections of these
+% transitions: they are highly forbidden, with transition probabilities $\sim10$
+% orders of magnitude lower than the $\Delta v=1$ transitions.
+%
+The high vibrational and low rotational temperatures of the
+salt lines resembles the `sawtooth' pattern observed for the rovibrational
+populations of \hh toward the Orion bar photodissociation region, 
+which is well-explained by ultraviolet excitation into higher electronic states,
+followed by decay back to excited vibrational levels in the ground electronic
+state \citep{Kaplan2017}.  This mechanism avoids the $Delta v=1$ restriction
+for infrared excitation.  \hh rotational populations in the ground vibrational
+state are thermalized by collisions; UV excitation transposes this pattern into
+higher vibrational states.
 
-This scenario is plausible, but it raises a question: if the radiation field is
-strong enough to produce similar intensities across the v=0 to v=6 vibrational
-states, why have the rotational states not reached equilibrium with the radiation
-field?
+% Ultraviolet excitation into higher electronic states could explain the observed
+% vibrationally excited emission.  Assuming that electronic states deexcite into
+% random vibrational states, then trigger a subsequent cascade into the ground
+% rotational and vibrational states, each UV photon would be responsible for emission
+% spanning the full energy range.
 
-
-\par{\textbf{(2) Ultraviolet Excitation:}}
-In this model, collisions and infrared radiation can be ignored.  Instead,
-higher-energy photons are responsible for the excitation.  In order to directly
-excite the higher observed vibrationally excited states ($v\geq6$), 5 micron or
-shorter-wavelength photons are required.
-
-A model in which the excitation is driven by the radiation field at 4-10 microns,
-i.e., directly exciting the v=0 to the v=3-6 excitation states for NaCl,
-can be ruled out on the basis of the low interaction cross-sections of these
-transitions: they are highly forbidden, with transition probabilities $\sim10$
-orders of magnitude lower than the $\Delta v=1$ transitions.
-
-Ultraviolet excitation into higher electronic states could explain the observed
-vibrationally excited emission.  Assuming that electronic states deexcite into
-random vibrational states, then trigger a subsequent cascade into the ground
-rotational and vibrational states, each UV photon would be responsible for emission
-spanning the full energy range.
-
-There are several problems with this model.  First is that we do not detect lines
+There are several problems with this model.  First, we do not detect lines
 in higher vibrational states, with weak or ambiguous detections in the v=7 and v=8 
-states of NaCl, and nondetections in higher vibrational states.  Unless there is
+states of NaCl, and nondetections in higher vibrational levels.  Unless there is
 some selection effect in the electronic de-excitation disfavoring higher vibrational
 states, it is difficult to explain these missing lines.  
-
-Second, the binding energy of NaCl and KCl are only a few eV.  They may therefore
-be dissociated rather than excited by UV photons.
-
+Second, the binding energy of NaCl and KCl are only a few eV  \rlp{exact values here?}. 
+they may therefore be dissociated rather than excited by UV photons.
 Third, there may not be any UV radiation in the outer disk where these lines
-are detected.  \sourcei has no associated free-free emission
+are detected.  \sourcei has no associated electron-proton free-free emission
 \citep{Plambeck2013a}, so a strong $\lambda<912$ \AA\ UV field is ruled out.  While UV
-emission may be produced in shocks in the outflow, it is unclear whether enough
-UV radiation would be produced or could penentrate to the parts of the disk where
+emission may be produced in shocks in the outflow, it is unclear whether
+it could penentrate to the parts of the disk where
 the salt emission is observed.  Even a light haze of dust in the upper layers of
 the disk would likely shield the molecules from such illumination.
 
-\textbf{(3) The rovibrational transitions are optically thick up to
-v$\sim$6, while the rotational transitions remain optically thin.}
+% \textbf{(4) The rovibrational transitions are optically thick up to
+% v$\sim$6, while the rotational transitions remain optically thin.}
 
-In this scenario, we assume that the salt molecules are all in an `atmosphere'
-above the disk.  While the disk is optically thick in the 25-45 \um continuum,
-this `atmosphere' is optically thin, such that the lines are not strictly in
-equilibrium with the radiation field.  However, the lowest rovibrational
-transitions are optically thick and therefore do reach equilibrium with the
-local radiation field set primarily by the disk.  The millimeter lines remain
-optically thin, so they remain collisionally rather than radiatively excited.
-The higher rovibrational transitions are also optically thin, so the $v>6$
-states remain thin.  
+% In this scenario, we assume that the salt molecules are all in an `atmosphere'
+% above the disk.  While the disk is optically thick in the 25-45 \um continuum,
+% this `atmosphere' is optically thin, such that the lines are not strictly in
+% equilibrium with the radiation field.  However, the lowest rovibrational
+% transitions are optically thick and therefore do reach equilibrium with the
+% local radiation field set primarily by the disk.  The millimeter lines remain
+% optically thin \rlp{I don't understand how this is possible; wouldn't the
+% pure rotational levels within the lower vibrational states also be thermalized
+% by the IR photons, hence end up at much higher temperature?}, so they remain collisionally rather than 
+% radiatively excited.
+% The higher rovibrational transitions are also optically thin, so the $v>6$
+% states remain thin.  
 
-This scenario could imply that any other molecules in the disk atmosphere,
-such as CS or CO if they are present, would have large populations in their
-vibrationally excited states.
+% This scenario could imply that any other molecules in the disk atmosphere,
+% such as CS or CO if they are present, would have large populations in their
+% vibrationally excited states.
 
-It is not clear whether this model can explain the observed lines.  Modeling
-of the radiation field with realistic geometry for the disk (which provides
-an undiluted 100-500 K background) and the central source (which supplies a highly
-diluted $\sim4000$ K illumination) is needed.  Without including a background
-radiation field, this scenario does not appear to work, as the rotational
-transitions tend to be optically thicker than the vibrational if only collisional
-processes are active.
+% It is not clear whether this model can explain the observed lines.  Modeling
+% of the radiation field with realistic geometry for the disk (which provides
+% an undiluted 100-500 K background) and the central source (which supplies a highly
+% diluted $\sim4000$ K illumination) is needed.  Without including a background
+% radiation field, this scenario does not appear to work, as the rotational
+% transitions tend to be optically thicker than the vibrational if only collisional
+% processes are active.
 
 % {\color{red} todo: compute the column density needed to achieve $\tau=1$ in the
 % v=1-0 J=10-9 transition, or similar}
@@ -589,24 +624,24 @@ processes are active.
 %optically thick would also drive the rotational states to be, which would be
 %inconsistent with the observations.
 
-\textbf{(4) Collisions with electrons}
-Collisions with electrons are much more efficient than collisions with \hh.
-Using the approximations from \citet{Dickinson1975a}, we find that collision
-rates between both NaCl and KCl and electrons in the J=5-50 v=0 states are
-$C\approx10^{-5}$ cm$^{3}$ \pers.  These rates imply a critical electron
-abundance $X_e = C(\hh)/C(e^-) \approx 10^{-5}$, where we  assume
-$C(\hh)\approx10^{-10}$ cm$^3$ \pers, close to the typical value for
-the low-lying rotational transitions.  In other words, electrons are
-$10^5\times$ more efficient at exciting these molecules than \hh.
+% \textbf{(4) Collisions with electrons}
+% Collisions with electrons are much more efficient than collisions with \hh.
+% Using the approximations from \citet{Dickinson1975a}, we find that collision
+% rates between both NaCl and KCl and electrons in the J=5-50 v=0 states are
+% $C\approx10^{-5}$ cm$^{3}$ \pers.  These rates imply a critical electron
+% abundance $X_e = C(\hh)/C(e^-) \approx 10^{-5}$, where we  assume
+% $C(\hh)\approx10^{-10}$ cm$^3$ \pers, close to the typical value for
+% the low-lying rotational transitions.  In other words, electrons are
+% $10^5\times$ more efficient at exciting these molecules than \hh.
 
-The electron abundance may be higher than the critical value.  In typical
-low-mass disks, electron abundances $X_e \geq 10^4$ occur in the upper layers
-of the disk, where some UV radiation is able to ionize H and C to H+ and C+
-\citep{Bergin2007a}.  However, deeper into these disks, only X-rays and cosmic
-rays can penetrate to ionize neutrals, resulting in abundances too small to be
-relevant ($X_e < 10^{-6}$).  The importance of this scenario is critically
-sensitive to the ionization rate in the salt-bearing portion of the disk, which
-is uncertain.
+% The electron abundance may be higher than the critical value.  In typical
+% low-mass disks, electron abundances $X_e \geq 10^4$ occur in the upper layers
+% of the disk, where some UV radiation is able to ionize H and C to H+ and C+
+% \citep{Bergin2007a}.  However, deeper into these disks, only X-rays and cosmic
+% rays can penetrate to ionize neutrals, resulting in abundances too small to be
+% relevant ($X_e < 10^{-6}$).  The importance of this scenario is critically
+% sensitive to the ionization rate in the salt-bearing portion of the disk, which
+% is uncertain.
 
 % \ag{Two questions:
 % (1) Is the electron temperature going to be different from the
